<resources>
    <string name="app_name">RESTful Client</string>
    <!-- USER STRINGS. -->

    <!-- MAIN ACTIVITY. -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="usernameMissing">Username required!</string>
    <string name="passwordMissing">Password required!</string>
    <string name="wrongCredentials">Wrong username or password!</string>
    <string name="invalidResponse">Invalid response from server!</string>
    <string name="tryAgain">Error! Try logging in again!</string>
    <!-- RESTFUL COMMUNICATION. -->
    <string name="performUpdate">Perform Update</string>
    <string name="getRAM">Get RAM Load</string>
    <string name="getStorage">Get Storage Status</string>
    <!-- RESTFUL MESSAGES. -->

    <string name="InformationScreen">Alpha Board Information</string>
    <!-- RESTFUL LAYOUT TEXT. -->
    <string name="TotalCPULoad">Total CPU Load : </string>
    <string name="CurrentProcessLoad">Current Process CPU Load :</string>
    <string name="ProcessRAMUsage">Total physical RAM utilization  : </string>
    <string name="CurrentlyUsedRAM">VMEM used by this process : </string>
    <string name="UnitName">KB</string>
    <!-- EVENTS. -->
    <string name="updaterEvent">updater</string>
    <string name="combinerEvent">combiner</string>
    <!-- UPDATER EVENTS. -->
    <string name="ipAddress">178.79.186.62</string>
    <string name="port">8080</string>
    <string name="packageName">UCM_Test_SwPkg.tar.gz</string>
    <string name="updateStatus">Update status: </string>
    <!-- COMBINER EVENTS. -->
    <string name="CombinerScreen">Combiner Parameters</string>
    <string name="ChooseSetup">Combiner settings</string>
    <string name="SetLayout">Set layout change</string>
    <string name="CancelLayout">Discard layout change</string>
    <string name="Resolution">Resolution</string>
    <string name="FHD">1080p</string>
    <string name="FHDi">1080i</string>
    <string name="HDReady">720p</string>
    <string name="WXGA">1360x768</string>
    <string name="XGA">1024x768</string>
    <string name="SplitStyle">Split style</string>
    <string name="FullscreenLayout">Fullscreen view</string>
    <string name="SplitLayout">Split screen view</string>
    <string name="UnevenSplitLayout">Uneven split screen</string>
    <string name="Port">Port</string>
    <string name="PortNum1">1</string>
    <string name="PortNum2">2</string>
    <string name="PortNum3">3</string>
    <string name="PortNum4">4</string>
    <string name="Status">Combiner status:</string>
    <!-- DIAGNOSTICS EVENT. -->
    <string name="DiagnosticsEvent">diagnostics</string>
    <!-- Combiner messages -->
    <string name="fullscreen">fullscreen</string>
    <string name="split_screen">split-view</string>
    <string name="uneven_split">uneven-split</string>
</resources>
