<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Primary"
    android:weightSum="9"
    tools:context=".RESTfulCommunication">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:id="@+id/DiagScreenText"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/InformationScreen"
            android:textColor="@color/MainScreenText"
            android:gravity="center"
            android:textAllCaps="false"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6.5"
        android:layout_below="@id/DiagScreenText"
        android:layout_above="@id/buttonPanel"
        android:id="@+id/DiagScrollView"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/MainScreenText"
            android:id="@+id/diagnosticsTextView"
        />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:weightSum="2"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:id="@+id/buttonPanel">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/performUpdate"
            android:id="@+id/performAlphaUpdate"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/ChooseSetup"
            android:id="@+id/setupCombiner"/>
    </LinearLayout>

</RelativeLayout>